force-app/main/default/objects/WC_Prompt_Config__mdt/WC_Prompt_Config__mdt.object-meta.xml
<CustomObject>
    <description>WC — Names for Einstein Prompt Builder templates invoked from Apex.</description>
    <label>WC Prompt Config</label>
    <pluralLabel>WC Prompt Configs</pluralLabel>
</CustomObject>