force-app/main/default/objects/WC_Prompt_Config__mdt/fields/Approver_Summary_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Approver_Summary_Template_Name__c</fullName>
    <description>Flex template developer name for WC_GenerateApproverSummaryAction (Use Case 2).</description>
    <label>Approver Summary Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>