force-app/main/default/objects/WC_Prompt_Config__mdt/fields/Electra_Reason_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Electra_Reason_Template_Name__c</fullName>
    <description>Flex template developer name for WC_ElectraApprovalReasonGenerator (auto-approval audit text).</description>
    <label>Electra Reason Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>