force-app/main/default/objects/WC_Prompt_Config__mdt/fields/Llm_Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Llm_Application_Name__c</fullName>
    <description>ConnectApi Einstein LLM application context (e.g. EinsteinGpt). Adjust if your org requires a different value.</description>
    <label>LLM Application Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>