force-app/main/default/objects/WC_Prompt_Config__mdt/fields/Suggest_Part_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Suggest_Part_Template_Name__c</fullName>
    <description>Developer API name of the Flex prompt (Prompt Builder) that suggests a part from Knowledge.</description>
    <label>Suggest Part Template Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>